@@ -397,6 +397,9 @@ None.
     if the interface has 'routeback' specified (either explicitly or
     detected).
 
+9)  Apple Macs running OS X may now be used as a Shorewall
+    administrative system. Simply install using the tarball installer.
+
 ----------------------------------------------------------------------------
 V I.  P R O B L E M S  C O R R E C T E D  A N D  N E W   F E A T U R E S
       I N   P R I O R  R E L E A S E S
