@@ -43,6 +43,8 @@ Changes in Shorewall 4.4.9
 20) In the routestopped file, assume 'routeback' if the interface has
     'routeback'.
 
+21) Make Shorewall and Shorewall6 installable on OS X.
+
 Changes in Shorewall 4.4.8
 
 1)  Correct handling of RATE LIMIT on NAT rules.
